--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4752,11 +4752,11 @@ img {
                 </div>
             </header>
             <div class="post_body">
-                <aside class="post_inset line-container">
+                <aside class="post_inset post_inset__right line-container">
                     <div class="line-container_body">
-                        <h4>
+                        <h3>
                             Final list of rural and underserved counties
-                        </h4>
+                        </h3>
                         <p>
                             View or download the list in any of these formats:
                         </p>
@@ -4779,9 +4779,9 @@ img {
                         </ul>
                     </div>
                     <div class="line-container_body">
-                        <h4>
+                        <h3>
                             Final list of rural and underserved counties
-                        </h4>
+                        </h3>
                         <p>
                             View or download the list in any of these formats:
                         </p>
@@ -4834,7 +4834,7 @@ img {
                     corporis nemo culpa dolorum! Laborum at eos deleniti
                     consequatur itaque officiis debitis quisquam! Provident!
                 </p>
-                <aside class="post_inset line-container">
+                <aside class="post_inset post_inset__right line-container">
                     <div class="line-container_body pull-quote">
                         <div class="pull-quote_body">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -4879,6 +4879,32 @@ img {
                     consequatur itaque officiis debitis quisquam! Provident!
                 </p>
                 <aside class="post_inset line-container">
+                    <div class="line-container_body pull-quote pull-quote__large">
+                        <div class="pull-quote_body">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Cum corrupti tempora nam nihil qui mollitia consectetur
+                            corporis nemo culpa dolorum!
+                        </div>
+                        <footer>
+                            <cite class="pull-quote_citation">
+                                - Author Name
+                            </cite>
+                        </footer>
+                    </div>
+                </aside>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Cum corrupti tempora nam nihil qui mollitia consectetur
+                    corporis nemo culpa dolorum! Laborum at eos deleniti
+                    consequatur itaque officiis debitis quisquam! Provident!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Cum corrupti tempora nam nihil qui mollitia consectetur
+                    corporis nemo culpa dolorum! Laborum at eos deleniti
+                    consequatur itaque officiis debitis quisquam! Provident!
+                </p>
+                <aside class="post_inset post_inset__right line-container">
                     <h2 class="line-container_pullup header-slug">
                         <span class="header-slug_inner">
                             More information
@@ -4954,6 +4980,11 @@ img {
                     corporis nemo culpa dolorum! Laborum at eos deleniti
                     consequatur itaque officiis debitis quisquam! Provident!
                 </p>
+                <ul>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                </ul>
                 <ul>
                     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
