--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4207,6 +4207,7 @@ img {
   display: block;
   width: 1em;
   color: #ffb149;
+  font-family: Arial, sans-serif;
   font-size: 1.41666667em;
 }
 /* topdoc
