--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -141,6 +141,7 @@
             display: block;
             width: 1em;
             color: @gold-80;
+            font-family: Arial, sans-serif;
             font-size: unit(@bullet-font-size / @font-size, em);
         }
     }
