Tweaking bullets for tags for ie.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4210,6 +4210,9 @@ img {
   font-family: Arial, sans-serif;
   font-size: 1.41666667em;
 }
+.tags_link:before .lt-ie9 {
+  left: -17px;
+}
 /* topdoc
   name: Date
   family: cfgov-meta
