Testing ie and a11y fix for tags.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4150,6 +4150,7 @@ img {
   }
 }
 .tags_link {
+  position: relative;
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
@@ -4159,7 +4160,6 @@ img {
   margin-bottom: 0.41666667em;
   font-size: 0.75em;
   line-height: 1.83333333;
-  position: relative;
   display: block;
   padding: 12px 0 8px;
   margin: 0 0 0 1.41666667em;
@@ -4200,8 +4200,7 @@ img {
     padding: 0;
   }
 }
-.tags_link:before {
-  content: "\2022";
+.tags_bullet {
   position: absolute;
   left: -1em;
   display: block;
@@ -4210,7 +4209,7 @@ img {
   font-family: Arial, sans-serif;
   font-size: 1.41666667em;
 }
-.tags_link:before .lt-ie9 {
+.tags_bullet .lt-ie9 {
   left: -17px;
 }
 /* topdoc
