--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -110,11 +110,11 @@
         });
     }
 
-    &_link {
-        @bullet-font-size: 17px;
+    @bullet-font-size: 17px;
 
-        .h6();
+    &_link {
         position: relative;
+        .h6();
         display: block;
         // Eyeballed to 15px including line height.
         padding: 12px 0 8px;
@@ -132,23 +132,21 @@
         .u-respond-to-min(@bp, {
             padding: 0;
         });
-
-        &:before {
-            content: "\2022";
-            position: absolute;
-            left: -1em;
-            .lt-ie9 {
-                left: @bullet-font-size * -1;
-            }
-            // Display block + width makes this whole area clickable.
-            display: block;
-            width: 1em;
-            color: @gold-80;
-            font-family: Arial, sans-serif;
-            font-size: unit(@bullet-font-size / @font-size, em);
-        }
     }
     
+    &_bullet {
+        position: absolute;
+        left: -1em;
+        .lt-ie9 {
+            left: @bullet-font-size * -1;
+        }
+        // Display block + width makes this whole area clickable.
+        display: block;
+        width: 1em;
+        color: @gold-80;
+        font-family: Arial, sans-serif;
+        font-size: unit(@bullet-font-size / 12px, em);
+    }
 }
 
 
