Final tags tweaks for ie and accessibility.

--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -144,6 +144,7 @@
         display: block;
         width: 1em;
         color: @gold-80;
+        // 12px is the font size of .tags_link
         font-size: unit(@bullet-font-size / 12px, em);
     }
 }
