--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4208,8 +4208,8 @@ img {
   color: #ffb149;
   font-size: 1.41666667em;
 }
-.tags_bullet .lt-ie9 {
-  left: -17px;
+.tags_bullet .lt-ie8 {
+  top: 4px;
 }
 /* topdoc
   name: Date
