--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -137,8 +137,8 @@
     &_bullet {
         position: absolute;
         left: -1em;
-        .lt-ie9 {
-            left: @bullet-font-size * -1;
+        .lt-ie8 {
+            top: 4px;
         }
         // Display block + width makes this whole area clickable.
         display: block;
