--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4208,7 +4208,7 @@ img {
   color: #ffb149;
   font-size: 1.41666667em;
 }
-.tags_bullet .lt-ie8 {
+.lt-ie8 .tags_bullet {
   top: 4px;
 }
 /* topdoc
