--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -137,7 +137,7 @@
     &_bullet {
         position: absolute;
         left: -1em;
-        .lt-ie8 {
+        .lt-ie8 & {
             top: 4px;
         }
         // Display block + width makes this whole area clickable.
