--- a/static/css/post.less
+++ b/static/css/post.less
@@ -330,16 +330,19 @@
                     <ul class="tags_list">
                         <li class="tags_tag">
                             <a href="#" class="tags_link">
+                                <span class="tags_bullet" aria-hidden="true">&bull;</span>
                                 Students
                             </a>
                         </li>
                         <li class="tags_tag">
                             <a href="#" class="tags_link">
+                                <span class="tags_bullet" aria-hidden="true">&bull;</span>
                                 Consumers
                             </a>
                         </li>
                         <li class="tags_tag">
                             <a href="#" class="tags_link">
+                                <span class="tags_bullet" aria-hidden="true">&bull;</span>
                                 College loans
                             </a>
                         </li>
