First pass at hero pattern.

--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -9,17 +9,8 @@
     });
 }
 
-.header {
-    border-bottom: 10px solid @green;
-}
-
-.content_hero {
-    padding: 1em 0;
-    background: @gray-20;
-
-    > h1 {
-        margin: 0;
-    }
+.content_outer-wrapper {
+    border-top: 10px solid @green;
 }
 
 .content_main,
