--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3718,15 +3718,8 @@ img {
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
-.header {
-  border-bottom: 10px solid #2cb34a;
-}
-.content_hero {
-  padding: 1em 0;
-  background: #e3e4e5;
-}
-.content_hero > h1 {
-  margin: 0;
+.content_outer-wrapper {
+  border-top: 10px solid #2cb34a;
 }
 .content_main,
 .content_sidebar {
@@ -4437,6 +4430,82 @@ img {
    cfgov-refresh
    misc
    ========================================================================== */
+/* topdoc
+  name: Hero
+  family: cfgov-misc
+  patterns:
+    - name: Basic hero
+      markup: |
+        ...
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          ...
+  tags:
+    - cfgov-misc
+*/
+.hero {
+  background: #337e7d;
+}
+.hero_card-inner {
+  padding: 30px;
+  background: #ffffff;
+  background: rgba(255, 255, 255, 0.9);
+}
+@media only all and (min-width: 41.25em) {
+  .hero {
+    padding-top: 1.875em;
+  }
+  .hero_card {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 100%;
+    padding-left: 50%;
+  }
+  .ie .hero_card {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .hero_card {
+    display: inline;
+    *zoom: 1;
+    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+  .lt-ie8 .hero_card {
+    padding-left: 0;
+  }
+}
+@media only all and (min-width: 64em) {
+  .hero_card {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 100%;
+    padding-left: 66.66666667%;
+  }
+  .ie .hero_card {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .hero_card {
+    display: inline;
+    *zoom: 1;
+    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+  .lt-ie8 .hero_card {
+    padding-left: 0;
+  }
+}
 /* topdoc
   name: Lists
   family: cfgov-misc
