Fixes meta tags docs.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4066,46 +4066,55 @@ img {
             <ul class="tags_list">
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         Students
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         Consumers
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         College loans
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         Students
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         Consumers
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         College loans
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         Students
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         Consumers
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         College loans
                     </a>
                 </li>
