--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -15,46 +15,55 @@
             <ul class="tags_list">
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         Students
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         Consumers
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         College loans
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         Students
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         Consumers
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         College loans
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         Students
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         Consumers
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                         College loans
                     </a>
                 </li>
