--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4986,13 +4986,42 @@ img {
 */
 
 .hero {
-  background: #337e7d;
+  position: relative;
+  overflow: hidden;
+  background-color: #75787b;
 }
 
-.hero_card-inner {
-  padding: 30px;
-  background: #ffffff;
-  background: rgba(255, 255, 255, 0.9);
+.hero_img-container {
+  display: none;
+  line-height: 1;
+}
+
+.hero_img {
+  display: block;
+  height: 100%;
+  line-height: 1;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+.hero_img-container__small {
+  display: block;
+  height: 145px;
+}
+
+.hero_img-container__small {
+  display: none;
+}
+
+.hero_img-container__large {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 1;
 }
 
 .hero {
@@ -5000,6 +5029,7 @@ img {
 }
 
 .hero_card {
+  position: relative;
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -5010,6 +5040,7 @@ img {
   vertical-align: top;
   width: 100%;
   padding-left: 50%;
+  z-index: 2;
 }
 
 .ie .hero_card {
@@ -5024,6 +5055,12 @@ img {
 
 .lt-ie8 .hero_card {
   padding-left: 0;
+}
+
+.hero_card-inner {
+  padding: 30px;
+  background: #ffffff;
+  background: rgba(255, 255, 255, 0.9);
 }
 
 /* topdoc
